--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">"Fun Quiz "</string>
+    <string name="my_text"><u>View Answers</u></string>
 </resources>
